# gip-research

./: CMakeLists.txt  README.md  imgui.ini
assets/: EA1_6_1000.data  sample-01.pgm  sample-02.data
code/: CMakeLists.txt
code/dump-bytes/: CMakeLists.txt  sample-dump.md
code/dump-bytes/src/: main.c
code/dump-ct/: CMakeLists.txt
code/dump-ct/src/: main.c
code/dump-image/: CMakeLists.txt
code/dump-image/src/: main.c
code/viewer/: CMakeLists.txt
code/viewer/include/: gui.h  image.h
code/viewer/src/: gui.c  image.c  main.c
vendors/: CMakeLists.txt
vendors/gip-gfx/: CMakeLists.txt  README.md
vendors/gip-gfx/cmake/: gip_gfx-config.cmake.in
vendors/gip-gfx/examples/: CMakeLists.txt
vendors/gip-gfx/examples/01_hello_pixel/: CMakeLists.txt  CMakeLists.txt.in  hello_pixel.c
vendors/gip-gfx/examples/02_hello_rectangle/: CMakeLists.txt  CMakeLists.txt.in  hello_rectangle.c
vendors/gip-gfx/examples/03_hello_line/: CMakeLists.txt  CMakeLists.txt.in  hello_line.c
vendors/gip-gfx/examples/04_hello_image/: CMakeLists.txt  CMakeLists.txt.in  hello_image.c
vendors/gip-gfx/examples/05_hello_click/: CMakeLists.txt  CMakeLists.txt.in  hello_click.c
vendors/gip-gfx/include/gip_gfx/: gip_gfx.h
vendors/gip-gfx/src/gip_gfx/: gip_gfx.c
