#  SPDX-License-Identifier: Apache-2.0
#  SPDX-FileCopyrightText: 2023--2024 Tom Vierjahn <tom.vierjahn@acm.org>
#  SPDX-FileCopyrightText: 2023--2024 Visual Computing WH <vc@w-hs.de>

add_subdirectory(01_hello_pixel)
add_subdirectory(02_hello_rectangle)
add_subdirectory(03_hello_line)
add_subdirectory(04_hello_image)
add_subdirectory(05_hello_click)
